added print media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,3 +309,25 @@ h1 {
     padding-inline: 23.3em;
   }
 }
+
+@media print {
+  header {
+    display: none;
+  }
+
+  iframe {
+    display: none;
+  }
+
+  section {
+    display: none;
+  }
+
+  aside {
+    display: none;
+  }
+
+  footer {
+    display: none;
+  }
+}
